; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/extr_al_hal_udma_config.c_al_udma_s2m_q_compl_hdr_split_config.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/alpine-hal/extr_al_hal_udma_config.c_al_udma_s2m_q_compl_hdr_split_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.al_udma_q = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@UDMA_S2M_Q_PKT_CFG_HDR_SPLIT_SIZE_MASK = common dso_local global i32 0, align 4
@UDMA_S2M_Q_PKT_CFG_EN_HDR_SPLIT = common dso_local global i32 0, align 4
@UDMA_S2M_Q_PKT_CFG_FORCE_HDR_SPLIT = common dso_local global i32 0, align 4
@AL_TRUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @al_udma_s2m_q_compl_hdr_split_config(%struct.al_udma_q* %0, i64 %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.al_udma_q*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.al_udma_q* %0, %struct.al_udma_q** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load %struct.al_udma_q*, %struct.al_udma_q** %5, align 8
  %11 = getelementptr inbounds %struct.al_udma_q, %struct.al_udma_q* %10, i32 0, i32 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = call i32 @al_reg_read32(i32* %14)
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* @UDMA_S2M_Q_PKT_CFG_HDR_SPLIT_SIZE_MASK, align 4
  %17 = xor i32 %16, -1
  %18 = load i32, i32* %9, align 4
  %19 = and i32 %18, %17
  store i32 %19, i32* %9, align 4
  %20 = load i32, i32* @UDMA_S2M_Q_PKT_CFG_EN_HDR_SPLIT, align 4
  %21 = xor i32 %20, -1
  %22 = load i32, i32* %9, align 4
  %23 = and i32 %22, %21
  store i32 %23, i32* %9, align 4
  %24 = load i32, i32* @UDMA_S2M_Q_PKT_CFG_FORCE_HDR_SPLIT, align 4
  %25 = xor i32 %24, -1
  %26 = load i32, i32* %9, align 4
  %27 = and i32 %26, %25
  store i32 %27, i32* %9, align 4
  %28 = load i64, i64* %6, align 8
  %29 = load i64, i64* @AL_TRUE, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %48

31:                                               ; preds = %4
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* @UDMA_S2M_Q_PKT_CFG_HDR_SPLIT_SIZE_MASK, align 4
  %34 = and i32 %32, %33
  %35 = load i32, i32* %9, align 4
  %36 = or i32 %35, %34
  store i32 %36, i32* %9, align 4
  %37 = load i32, i32* @UDMA_S2M_Q_PKT_CFG_EN_HDR_SPLIT, align 4
  %38 = load i32, i32* %9, align 4
  %39 = or i32 %38, %37
  store i32 %39, i32* %9, align 4
  %40 = load i64, i64* %7, align 8
  %41 = load i64, i64* @AL_TRUE, align 8
  %42 = icmp eq i64 %40, %41
  br i1 %42, label %43, label %47

43:                                               ; preds = %31
  %44 = load i32, i32* @UDMA_S2M_Q_PKT_CFG_FORCE_HDR_SPLIT, align 4
  %45 = load i32, i32* %9, align 4
  %46 = or i32 %45, %44
  store i32 %46, i32* %9, align 4
  br label %47

47:                                               ; preds = %43, %31
  br label %48

48:                                               ; preds = %47, %4
  %49 = load %struct.al_udma_q*, %struct.al_udma_q** %5, align 8
  %50 = getelementptr inbounds %struct.al_udma_q, %struct.al_udma_q* %49, i32 0, i32 0
  %51 = load %struct.TYPE_4__*, %struct.TYPE_4__** %50, align 8
  %52 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %51, i32 0, i32 0
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 0
  %54 = load i32, i32* %9, align 4
  %55 = call i32 @al_reg_write32(i32* %53, i32 %54)
  ret i32 0
}

declare dso_local i32 @al_reg_read32(i32*) #1

declare dso_local i32 @al_reg_write32(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
